@@ -1,3 +1,12 @@
+2018-05-04  Riccardo Mottola <rm@gnu.org>
+
+	* DBSoapCSV.h
+	* DBSoapCSV.m
+	* DBSoap.h
+	* DBSoap.m
+	* DBSoap+Selecting.m
+	Implement retrieve call.
+
 2018-04-23  Riccardo Mottola <rm@gnu.org>
 
 	* DBSoap.m
